# TableGame

./: CMakeLists.txt  Game.ui  README.md  SaveLoad.txt  gameMainWindow.cpp  gameMainWindow.h  main.cpp  saveLoader.cpp  saveLoader.h
